...
          Icon(
              imageVector = Icons.Outlined.Today,
              contentDescription = null,
              tint = cs.primary,
              modifier = Modifier.size(30.dp).padding(end = 8.dp))
          Text(
              if (!hasMultiple) "Today's Objective" else "Today's Objectives",
              style =
                  MaterialTheme.typography.titleMedium.copy(
                      color = cs.onSurface, fontWeight = FontWeight.SemiBold),
              modifier = Modifier.weight(1f).testTag(WeekProgDailyObjTags.OBJECTIVES_HEADER))
          if (hasMultiple) {
            val rotation by
...
