...

    <string-array name="ics_keywords_exam">
        <item>Horaires examinés</item>
    </string-array>

    <string name="study_session_subject_label">Subject</string>
    <string name="study_session_new_subject_placeholder">New subject</string>
    <string name="study_session_add_subject_button">Add</string>


    <!-- Stats screen main title -->
    <string name="stats_title_week">Your weekly statistics</string>
    <string name="stats_subjects_this_week_hint">
    Only includes study time for the current week.
...
    <!-- Event row -->
    <string name="event_remove">Remove event</string>

    <!-- Offline flashcards -->

    <string name="flashcards_offline_generate_link">You are offline, you cannot generate a link.</string>
    <string name="flashcards_offline_import_deck">You are offline, you cannot import a deck.</string>

    <!-- Wellness → External activities -->

    <string name="wellness_event_yoga_title">UNIL Sport Activities</string>
    <string name="wellness_event_yoga_time">Today</string>
    <string name="wellness_event_yoga_description">See today’s available sport activities at UNIL.</string>
...
